feat: HTML 문서의 제목 및 메타 태그 업데이트

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta
       name="google-site-verification"
       content="5M9NMykzRWCkWH5FrcMPDQztq6OQfHs4LhYaWTGyWVo"
     />
-    <title>nobel-prize</title>
+
+    <title>Nobel Insights | 노벨상 데이터 시각화 프로젝트</title>
+
+    <meta
+      name="description"
+      content="1901년부터 현재까지의 노벨상 데이터를 한눈에 확인하세요. 국가별, 분야별 수상 내역을 인터랙티브한 차트로 제공하는 지훈 채의 데이터 시각화 포트폴리오입니다."
+    />
+
+    <meta property="og:title" content="Nobel Insights - 데이터로 보는 노벨상" />
+    <meta
+      property="og:description"
+      content="인터랙티브 차트로 노벨상의 역사를 탐험해보세요."
+    />
+    <meta
+      property="og:image"
+      content="https://nobel-prize-sooty.vercel.app/og-image.png"
+    />
+    <meta property="og:url" content="https://nobel-prize-sooty.vercel.app/" />
   </head>
   <body>
     <div id="root"></div>
