--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       content="https://nobel-prize-sooty.vercel.app/og-image.png"
     />
     <meta property="og:url" content="https://nobel-prize-sooty.vercel.app/" />
+    <meta name="referrer" content="no-referrer" />
   </head>
   <body>
     <div id="root"></div>
